[tool.poetry]
name = "quoter"
version = "0.1.0"
description = ""
authors = ["Sachin Kumar <skumar@clearstreet.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
polygon-api-client = "^1.13.5"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
